# connectivity-manager

./: .clang-format  .clang-tidy  CONTRIBUTING.md  README.md  meson.build  meson_options.txt
data/: com.luxoft.ConnectivityManager.conf  com.luxoft.ConnectivityManager.service  com.luxoft.ConnectivityManager.xml  com.luxoft.Template.conf  com.luxoft.Template.service  com.luxoft.Template.xml  com.luxoft.TemplateDBusService.conf  com.luxoft.TemplateDBusService.service  com.luxoft.TemplateDBusService.xml  connectivity-manager.service.in  meson.build  net.connman.xml  template-dbus-service.service.in
src/: config.h.in  meson.build
src/cli/: arguments.cpp  arguments.h  command.cpp  command.h  command_monitor.cpp  command_monitor.h  command_wifi.cpp  command_wifi.h  input_handler.cpp  input_handler.h  main.cpp  meson.build
src/common/: credentials.cpp  credentials.h  dbus.h  meson.build  scoped_silent_log_handler.h  string_to_uint64.cpp  string_to_uint64.h  string_to_valid_utf8.cpp  string_to_valid_utf8.h  version.h.in
src/common/unit_tests/: credentials_test.cpp  meson.build  string_to_uint64_test.cpp
src/daemon/: arguments.cpp  arguments.h  backend.cpp  backend.h  daemon.cpp  daemon.h  dbus_name_watcher.h  dbus_service.cpp  dbus_service.h  main.cpp  meson.build
src/daemon/backends/: connman_agent.cpp  connman_agent.h  connman_backend.cpp  connman_backend.h  connman_connect_queue.cpp  connman_connect_queue.h  connman_dbus.h  connman_manager.cpp  connman_manager.h  connman_service.cpp  connman_service.h  connman_technology.cpp  connman_technology.h
src/daemon/dbus_objects/: manager.cpp  manager.h  wifi_access_point.cpp  wifi_access_point.h
src/daemon/unit_tests/: arguments_test.cpp  meson.build
tools/: check
tools/ci/: Dockerfile  Jenkinsfile  README.md
